Refactor(eos_cli_config_gen): Refactor eos_cli_config_gen switchport data models

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
@@ -15,6 +15,19 @@ interface Ethernet1
    l2 mru 8000
    bgp session tracker ST1
    no switchport
+   switchport access vlan 200
+   switchport trunk native vlan tag
+   switchport phone vlan 110
+   switchport phone trunk tagged
+   switchport trunk allowed vlan 10-11
+   switchport mode dot1q-tunnel
+   switchport trunk group g1
+   switchport trunk group g2
+   no switchport
+   switchport vlan translation in 23-37 45
+   switchport vlan translation out 23-37 45
+   switchport trunk private-vlan secondary
+   switchport pvlan mapping 20-30
    ip address 172.31.255.1/31
    ip verify unicast source reachable-via rx
    bfd interval 500 min-rx 500 multiplier 5
