--- a/python-avd/tox.ini
+++ b/python-avd/tox.ini
@@ -10,6 +10,13 @@ env_list =
 depends =
     report: coverage
 
+[gh-actions]
+python =
+  3.9: py39
+  3.10: py310
+  3.11: coverage, report
+  3.12: py312
+
 [testenv]
 description = run the tests with our own runner
 package = wheel
