--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-evpn.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-evpn.cfg
@@ -162,7 +162,7 @@ router bgp 65101
       evpn multicast
          address-family ipv4
             transit
-      default-route export evpn route-map TENANT_A_PROJECT03_RM_DEFAULT
+      default-route export evpn always route-map TENANT_A_PROJECT03_RM_DEFAULT
       route-target import evpn 13:13
       route-target export evpn 13:13
       router-id 192.168.255.3
