ci: Test for py39

--- a/python-avd/tox.ini
+++ b/python-avd/tox.ini
@@ -35,6 +35,12 @@ commands =
     # tox -e <env> -- path/to/my/test::test
     pytest {posargs}
 
+[testenv:py39]
+# Extra dep when building the env
+deps =
+  {[testenv]deps}
+  eval_type_backport
+
 [testenv:coverage]
 deps =
     pytest
