CI: Import the correct dep

--- a/python-avd/tox.ini
+++ b/python-avd/tox.ini
@@ -39,7 +39,7 @@ commands =
 # Extra dep when building the env
 deps =
   {[testenv]deps}
-  eval_type_backport
+  eval-type-backport
 
 [testenv:coverage]
 deps =
