Refactor(plugins): Move jinja test code for arista.avd.contains to PyAVD

--- a/python-avd/Makefile
+++ b/python-avd/Makefile
@@ -12,6 +12,7 @@ EOS_CLI_CONFIG_GEN_TEMPLATE_DIR = $(VENDOR_DIR)/templates
 SCHEMAS_DIR = $(VENDOR_DIR)/schemas
 EOS_DESIGNS_MODULES_DIR = $(VENDOR_DIR)/eos_designs
 PYAVD_FILTER_IMPORT = $(PACKAGE_DIR).j2filters
+PYAVD_TEST_IMPORT = $(PACKAGE_DIR).j2tests
 EOS_DESIGNS_IMPORT = $(PACKAGE_DIR)._eos_designs
 # export PYTHONPATH=$(CURRENT_DIR) # Uncomment to test from source
 
