Adding isis authentication sha, shared-secret.

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/core-1-isis-sr-ldp.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/core-1-isis-sr-ldp.cfg
@@ -68,8 +68,8 @@ interface Ethernet2
    isis metric 60
    isis hello padding
    isis network point-to-point
-   isis authentication mode md5
-   isis authentication key 7 $1c$mNvaIXPetcSA2UnFwIaxwA==
+   isis authentication key 7 $1c$sTNAlR6rKSw=
+   isis authentication mode shared-secret profile profile1 algorithm sha-1
 !
 interface Ethernet3
    description P2P_LINK_TO_core-2-ospf-ldp_Ethernet3
