--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
@@ -128,8 +128,8 @@ interface Ethernet5
    isis metric 99
    no isis hello padding
    isis network point-to-point
-   isis authentication mode md5
    isis authentication key 7 asfddja23452
+   isis authentication mode shared-secret profile profile1 algorithm sha-1
    spanning-tree guard loop
 !
 interface Ethernet6
