--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/core-1-isis-sr-ldp.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/core-1-isis-sr-ldp.yml
@@ -107,8 +107,13 @@ ethernet_interfaces:
   isis_network_point_to_point: true
   isis_hello_padding: true
   isis_circuit_type: level-1
-  isis_authentication_mode: md5
-  isis_authentication_key: $1c$mNvaIXPetcSA2UnFwIaxwA==
+  isis_authentication_mode: shared-secret
+  isis_authentication_parameters:
+    both:
+      shared_secret:
+        profile: profile1
+        algorithm: sha-1
+  isis_authentication_key: $1c$sTNAlR6rKSw=
   mpls:
     ip: true
     ldp:
