--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/CORE_UNIT_TESTS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/CORE_UNIT_TESTS.yml
@@ -93,6 +93,13 @@ core_interfaces:
       isis_circuit_type: level-1
       isis_metric: 60
       qos_profile: test_qos_profile
+      isis_authentication_mode: "shared-secret"
+      isis_authentication_parameters:
+        both:
+          shared_secret:
+            profile: "profile1"
+            algorithm: "sha-1"
+      isis_authentication_key: $1c$sTNAlR6rKSw=
 
     # Normal link with profile
     - nodes: [ core-1-isis-sr-ldp, core-2-ospf-ldp ]
