--- a/python-avd/tox.ini
+++ b/python-avd/tox.ini
@@ -44,6 +44,7 @@ deps =
     referencing>=0.35.0
 commands =
     coverage erase
+    make test-dep
     # posargs allows to run only a specific test using
     # tox -e <env> -- path/to/my/test::test
     coverage run --rcfile=pyproject.toml -m pytest {posargs}
