CI: Parallelize tox runs in Github Actions (#4129)

--- a/python-avd/tox.ini
+++ b/python-avd/tox.ini
@@ -10,6 +10,13 @@ env_list =
 depends =
     report: coverage
 
+[gh-actions]
+python =
+  3.9: py39
+  3.10: py310
+  3.11: coverage, report
+  3.12: py312
+
 [testenv]
 description = run the tests with our own runner
 package = wheel
@@ -37,6 +44,7 @@ deps =
     referencing>=0.35.0
 commands =
     coverage erase
+    make test-dep
     # posargs allows to run only a specific test using
     # tox -e <env> -- path/to/my/test::test
     coverage run --rcfile=pyproject.toml -m pytest {posargs}
