--- a/.github/workflows/pull-request-management.yml
+++ b/.github/workflows/pull-request-management.yml
@@ -467,11 +467,14 @@ jobs:
   pyavd:
     name: Test pyavd
     runs-on: ubuntu-latest
-    needs: [ file-changes ]
+    needs: [file-changes]
     if: |
       needs.file-changes.outputs.eos_design == 'true' ||
       needs.file-changes.outputs.config_gen == 'true' ||
       needs.file-changes.outputs.pyavd == 'true'
+    strategy:
+      matrix:
+        python: ["3.9", "3.10", "3.11", "3.12"]
     steps:
       - name: 'Set environment variables'
         run: |
@@ -480,15 +483,11 @@ jobs:
       - name: Set up Python 3
         uses: actions/setup-python@v5
         with:
-          python-version: |
-            3.9
-            3.10
-            3.11
-            3.12
+          python-version: ${{ matrix.python }}
       - name: 'Install tox'
         run: |
-          pip install tox --upgrade
-      - name: 'Run tox'
+          pip install tox tox-gh-actions --upgrade
+      - name: "Run pytest via tox for ${{ matrix.python }}"
         working-directory: python-avd
         run: |
           tox
