Update molecule and doc

--- a/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc1-leaf1a-catalog.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc1-leaf1a-catalog.yml
@@ -314,11 +314,11 @@ anta.tests.hardware:
     manufacturers:
     - Arastra, Inc.
     - Arista Networks
-    - Cisco
+    - Generic
     - Not Present
     result_overwrite:
       custom_field: 'Accepted Manufacturers: ''Arastra, Inc.'', ''Arista Networks'',
-        ''Cisco'', ''Not Present'''
+        ''Generic'', ''Not Present'''
 - VerifyTransceiversManufacturers:
     manufacturers:
     - Not Present
