--- a/python-avd/pyproject.toml
+++ b/python-avd/pyproject.toml
@@ -36,6 +36,7 @@ requires = [
     "mkdocstrings[python]",
     "pydantic>=2.3.0",
     "eval-type-backport>=0.2.0", # Only needed for 3.9
+    "cryptography>=38.0.4",
 ]
 build-backend = "custom_build_backend"
 backend-path = ["scripts"]
