--- a/python-avd/pyproject.toml
+++ b/python-avd/pyproject.toml
@@ -37,6 +37,7 @@ requires = [
     "pydantic>=2.3.0",
     "eval-type-backport>=0.2.0", # Only needed for 3.9
     "cryptography>=38.0.4",
+    "aristaproto>=0.1.1",
 ]
 build-backend = "custom_build_backend"
 backend-path = ["scripts"]
