perhaps fixing tox

--- a/python-avd/tox.ini
+++ b/python-avd/tox.ini
@@ -29,6 +29,7 @@ deps =
     PyYAML>=6.0.0
     pydantic>=2.3.0
     referencing>=0.35.0
+    aristaproto>=0.1.1
 commands =
     make test-dep
     # posargs allows to run only a specific test using
@@ -42,6 +43,7 @@ deps =
     pydantic>=2.3.0
     coverage[toml]
     referencing>=0.35.0
+    aristaproto>=0.1.1
 commands =
     coverage erase
     make test-dep
