Feat(eos_cli_config_gen): Support of BGP default-originate per VRF #3941 (#4122)
Co-authored-by: Guillaume Mulocher <gmulocher@arista.com>
Co-authored-by: Claus Holbech <holbech@arista.com>

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-evpn.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-evpn.cfg
@@ -119,10 +119,17 @@ router bgp 65101
       neighbor ADDITIONAL-PATH-PG-5 additional-paths send limit 42
       neighbor ADDITIONAL-PATH-PG-6 activate
       no neighbor ADDITIONAL-PATH-PG-6 additional-paths send any
+      neighbor EVPN-OVERLAY-PEERS default-route
       neighbor EVPN-OVERLAY-PEERS activate
       neighbor EVPN-OVERLAY-PEERS domain remote
       neighbor EVPN-OVERLAY-PEERS encapsulation vxlan
       no neighbor MLAG-IPv4-UNDERLAY-PEER activate
+      neighbor 10.100.100.1 activate
+      neighbor 10.100.100.1 default-route
+      neighbor 10.100.100.2 activate
+      neighbor 10.100.100.2 default-route route-map RM_DEFAULT_ROUTE
+      neighbor 10.100.100.3 activate
+      neighbor 10.100.100.3 default-route rcf RCF_DEFAULT_ROUTE()
       next-hop resolution disabled
       neighbor default next-hop-self received-evpn-routes route-type ip-prefix inter-domain
       route import ethernet-segment ip mass-withdraw
@@ -136,6 +143,7 @@ router bgp 65101
    vrf TENANT_A_PROJECT01
       rd 192.168.255.3:11
       evpn multicast
+      default-route export evpn
       route-target import evpn 11:11
       route-target export evpn 11:11
       router-id 192.168.255.3
@@ -146,6 +154,7 @@ router bgp 65101
    !
    vrf TENANT_A_PROJECT02
       rd 192.168.255.3:12
+      default-route export evpn always
       route-target import evpn 12:12
       route-target export evpn 12:12
       router-id 192.168.255.3
@@ -159,6 +168,7 @@ router bgp 65101
       evpn multicast
          address-family ipv4
             transit
+      default-route export evpn always route-map TENANT_A_PROJECT03_RM_DEFAULT
       route-target import evpn 13:13
       route-target export evpn 13:13
       router-id 192.168.255.3
@@ -166,6 +176,7 @@ router bgp 65101
    vrf TENANT_A_PROJECT04
       rd 192.168.255.3:14
       evpn multicast
+      default-route export evpn rcf TENANT_A_PROJECT03_RCF_DEFAULT()
       route-target import evpn 14:14
       route-target export evpn 14:14
       router-id 192.168.255.3
