--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-evpn.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-evpn.yml
@@ -77,9 +77,26 @@ router_bgp:
         enable: true
         inter_domain: true
     domain_identifier: "65101:0"
+    neighbors:
+      - ip_address: 10.100.100.1
+        activate: true
+        default_route:
+          enabled: true
+      - ip_address: 10.100.100.2
+        activate: true
+        default_route:
+          enabled: true
+          route_map: RM_DEFAULT_ROUTE
+      - ip_address: 10.100.100.3
+        activate: true
+        default_route:
+          enabled: true
+          rcf: RCF_DEFAULT_ROUTE()
     peer_groups:
       - name: EVPN-OVERLAY-PEERS
         activate: true
+        default_route:
+          enabled: true
         domain_remote: true
         encapsulation: vxlan
       - name: MLAG-IPv4-UNDERLAY-PEER
@@ -225,6 +242,8 @@ router_bgp:
       router_id: 192.168.255.3
       rd: "192.168.255.3:11"
       evpn_multicast: true
+      default_route_exports:
+        - address_family: evpn
       route_targets:
         import:
           - address_family: evpn
@@ -248,6 +267,9 @@ router_bgp:
     - name: TENANT_A_PROJECT02
       router_id: 192.168.255.3
       rd: "192.168.255.3:12"
+      default_route_exports:
+        - address_family: evpn
+          always: true
       route_targets:
         import:
           - address_family: evpn
@@ -276,6 +298,10 @@ router_bgp:
       evpn_multicast_address_family:
         ipv4:
           transit: true
+      default_route_exports:
+        - address_family: evpn
+          always: true
+          route_map: TENANT_A_PROJECT03_RM_DEFAULT
       route_targets:
         import:
           - address_family: evpn
@@ -292,6 +318,9 @@ router_bgp:
       evpn_multicast_address_family:
         ipv4:
           transit: false
+      default_route_exports:
+        - address_family: evpn
+          rcf: TENANT_A_PROJECT03_RCF_DEFAULT()
       route_targets:
         import:
           - address_family: evpn
