--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -216,16 +216,13 @@ repos:
         pass_filenames: false
         additional_dependencies: ['deepmerge>=1.1.0', 'PyYAML>=6.0.0', 'pydantic>=2.3.0', 'jsonschema>=4.10.3', 'referencing>=0.35.0']
 
-      - id: compile-templates
+      - id: templates
         name: Precompile eos_cli_config_gen Jinja2
-        # Workaround because pyavd.vendor is still needed for now - this also rebuilds the schemas so it is a bit wasteful
-        entry: sh -c 'cd python-avd; make dep'
-        # entry: sh -c 'python-avd/scripts/compile_templates.py'
+        entry: sh -c 'python-avd/scripts/compile_templates.py'
         language: python
         files: python-avd/pyavd/_eos_cli_config_gen/j2templates/
         pass_filenames: false
-        additional_dependencies: ['Jinja2>=3.0.0', 'deepmerge>=1.1.0', 'PyYAML>=6.0.0', 'pydantic>=2.3.0', 'jsonschema>=4.10.3', 'referencing>=0.35.0', 'cryptography>=38.0.4']
-        # additional_dependencies: ['Jinja2>=3.0.0']
+        additional_dependencies: ['Jinja2>=3.0.0', 'cryptography>=38.0.4', 'deepmerge>=1.1.0', 'PyYAML>=6.0.0', 'pydantic>=2.3.0', 'jsonschema>=4.10.3', 'referencing>=0.35.0']
 
   - repo: https://github.com/igorshubovych/markdownlint-cli
     rev: v0.41.0
