--- a/ansible_collections/arista/avd/requirements.txt
+++ b/ansible_collections/arista/avd/requirements.txt
@@ -1,15 +1,3 @@
 # PyAVD must follow the exact same version as the Ansible collection.
 # For development this should be installed as an editable install as specified in requirement-dev.txt
-pyavd==4.9.0-dev0
-netaddr>=0.7.19
-Jinja2>=3.0.0
-treelib>=1.5.5
-cvprac>=1.3.1
-jsonschema>=4.10.3
-referencing>=0.35.0
-requests>=2.27.0
-PyYAML>=6.0.0
-deepmerge>=1.1.0
-cryptography>=38.0.4
-anta>=1.0.0
-aristaproto>=0.1.1
+pyavd[ansible-collection]==4.9.0-dev0
