--- a/python-avd/pyproject.toml
+++ b/python-avd/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name="pyavd"
-dynamic = ["version", "dependencies", "optional-dependencies"]
+dynamic = ["version"]
 authors=[{ name = "Arista Networks", email = "ansible@arista.com"}]
 description="Arista Validated Designs"
 readme = "README.md"
@@ -19,10 +19,31 @@ classifiers = [
 ]
 keywords = ["pyavd"]
 requires-python = ">=3.9"
+dependencies = [
+    "aristaproto>=0.1.1",
+    "cryptography>=38.0.4",
+    "deepmerge>=1.1.0",
+    "Jinja2>=3.0",
+    "jsonschema>=4.10.3",
+    "requests>=2.27.0",
+]
 
 [project.urls]
 homepage = "https://avd.arista.com"
 repository = "https://github.com/aristanetworks/avd"
+
+[project.optional-dependencies]
+ansible = [
+    "ansible-core>=2.15.0,<2.18.0",
+    "pyavd[ansible-collection]",
+]
+ansible-collection = [
+    "anta>=1.0.0",
+    "cvprac>=1.3.1",
+    "netaddr>=0.7.19",
+    "PyYAML>=6.0.0",
+    "treelib>=1.5.5",
+]
 
 [build-system]
 requires = [
@@ -54,12 +75,9 @@ include-package-data = true
 
 [tool.setuptools.packages.find]
 include = ["pyavd*"]
-exclude = ["vendor_overrides*"]
 
 [tool.setuptools.dynamic]
 version = {attr = "pyavd.__version__"}
-dependencies = {file = ["requirements.txt"]}
-optional-dependencies = {"ansible" = { file = ["requirements-ansible-avd.txt"] } }
 
 [tool.black]
 line-length = 160
