Feat(eos_designs): Add support for directly connected WAN HA (#3720)
Co-authored-by: Claus Holbech <holbech@arista.com>

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-pathfinder2.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-pathfinder2.yml
@@ -603,6 +603,10 @@ metadata:
       - name: AVD_Land_West-ZONE
         id: 1
         sites:
+        - name: Site404
+          id: 404
+          location:
+            address: Not Found
         - name: Site422
           id: 422
           location:
