--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
@@ -358,6 +358,10 @@ all:
                     cv-pathfinder-transit1A:
                     cv-pathfinder-transit1B:
                     site-ha-enabled-leaf1:
+                SITE_DIRECT_HA:
+                  hosts:
+                    cv-pathfinder-edge3A:
+                    cv-pathfinder-edge3B:
                 SITE_HA_DISABLED:
                   hosts:
                     cv-pathfinder-edge:
