--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge3B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge3B.cfg
@@ -14,15 +14,13 @@ flow tracking hardware
 !
 service routing protocols model multi-agent
 !
-ip as-path access-list ASPATH-WAN permit 65000 any
-!
-hostname cv-pathfinder-transit1B
+hostname cv-pathfinder-edge3B
 !
 router adaptive-virtual-topology
-   topology role transit region
+   topology role edge
    region AVD_Land_West id 42
    zone AVD_Land_West-ZONE id 1
-   site Site422 id 422
+   site Site404 id 404
    !
    policy DEFAULT-AVT-POLICY
       !
@@ -43,11 +41,6 @@ router adaptive-virtual-topology
       match application-profile default
          avt profile DEFAULT-AVT-POLICY-DEFAULT
    !
-   policy DEFAULT-POLICY
-      !
-      match application-profile default
-         avt profile DEFAULT-POLICY-DEFAULT
-   !
    policy PROD-AVT-POLICY
       !
       match application-profile VOICE
@@ -62,17 +55,6 @@ router adaptive-virtual-topology
       match application-profile default
          avt profile PROD-AVT-POLICY-DEFAULT
    !
-   policy TRANSIT-AVT-POLICY
-      !
-      match application-profile VOICE
-         avt profile CUSTOM-VOICE-PROFILE-NAME
-      !
-      match application-profile default
-         avt profile TRANSIT-AVT-POLICY-DEFAULT
-   !
-   profile CUSTOM-VOICE-PROFILE-NAME
-      path-selection load-balance LB-CUSTOM-VOICE-PROFILE-NAME
-   !
    profile DEFAULT-AVT-POLICY-CONTROL-PLANE
       path-selection load-balance LB-DEFAULT-AVT-POLICY-CONTROL-PLANE
    !
@@ -81,9 +63,6 @@ router adaptive-virtual-topology
    !
    profile DEFAULT-AVT-POLICY-VIDEO
       path-selection load-balance LB-DEFAULT-AVT-POLICY-VIDEO
-   !
-   profile DEFAULT-POLICY-DEFAULT
-      path-selection load-balance LB-DEFAULT-POLICY-DEFAULT
    !
    profile PROD-AVT-POLICY-DEFAULT
       path-selection load-balance LB-PROD-AVT-POLICY-DEFAULT
@@ -96,13 +75,6 @@ router adaptive-virtual-topology
    !
    profile PROD-AVT-POLICY-VOICE
       path-selection load-balance LB-PROD-AVT-POLICY-VOICE
-   !
-   profile TRANSIT-AVT-POLICY-DEFAULT
-      path-selection load-balance LB-TRANSIT-AVT-POLICY-DEFAULT
-   !
-   vrf ATTRACTED-VRF-FROM-UPLINK
-      avt policy DEFAULT-POLICY
-      avt profile DEFAULT-POLICY-DEFAULT id 1
    !
    vrf default
       avt policy DEFAULT-AVT-POLICY-WITH-CP
@@ -121,41 +93,24 @@ router adaptive-virtual-topology
       avt profile PROD-AVT-POLICY-VOICE id 2
       avt profile PROD-AVT-POLICY-VIDEO id 4
       avt profile PROD-AVT-POLICY-MPLS-ONLY id 5
-   !
-   vrf TRANSIT
-      avt policy TRANSIT-AVT-POLICY
-      avt profile TRANSIT-AVT-POLICY-DEFAULT id 1
-      avt profile CUSTOM-VOICE-PROFILE-NAME id 42
 !
 router path-selection
    tcp mss ceiling ipv4 ingress
    !
-   path-group INET id 101
-      ipsec profile CP-PROFILE
-      !
-      local interface Ethernet1.42
-         stun server-profile INET-cv-pathfinder-pathfinder-Ethernet1 INET-cv-pathfinder-pathfinder-Ethernet3
-      !
-      peer dynamic
-      !
-      peer static router-ip 192.168.144.1
-         name cv-pathfinder-pathfinder
-         ipv4 address 172.17.7.7
-         ipv4 address 10.9.9.9
-   !
    path-group LAN_HA id 65535
+      ipsec profile DP-PROFILE
       flow assignment lan
       !
       local interface Ethernet52
       !
-      peer static router-ip 192.168.143.1
-         name cv-pathfinder-transit1A
-         ipv4 address 172.17.0.1
+      peer static router-ip 192.168.142.6
+         name cv-pathfinder-edge3A
+         ipv4 address 10.10.10.0
    !
    path-group MPLS id 100
       keepalive interval 300 milliseconds failure-threshold 5 intervals
       !
-      local interface Ethernet2.42
+      local interface Ethernet2
          stun server-profile MPLS-cv-pathfinder-pathfinder-Ethernet2_2
       !
       peer dynamic
@@ -165,33 +120,19 @@ router path-selection
          name cv-pathfinder-pathfinder
          ipv4 address 172.16.0.1
    !
-   load-balance policy LB-CUSTOM-VOICE-PROFILE-NAME
-      path-group LAN_HA
-      path-group MPLS
-      path-group INET priority 2
-   !
    load-balance policy LB-DEFAULT-AVT-POLICY-CONTROL-PLANE
-      path-group INET
       path-group LAN_HA
       path-group MPLS
    !
    load-balance policy LB-DEFAULT-AVT-POLICY-DEFAULT
-      path-group INET
       path-group LAN_HA
       path-group MPLS priority 4223
    !
    load-balance policy LB-DEFAULT-AVT-POLICY-VIDEO
-      path-group INET
-      path-group LAN_HA
-      path-group MPLS
-   !
-   load-balance policy LB-DEFAULT-POLICY-DEFAULT
-      path-group INET
       path-group LAN_HA
       path-group MPLS
    !
    load-balance policy LB-PROD-AVT-POLICY-DEFAULT
-      path-group INET
       path-group LAN_HA
       path-group MPLS priority 2
    !
@@ -203,41 +144,31 @@ router path-selection
       loss-rate 42.0
       path-group LAN_HA
       path-group MPLS
-      path-group INET priority 2
    !
    load-balance policy LB-PROD-AVT-POLICY-VOICE
       hop count lowest
       jitter 42
       path-group LAN_HA
       path-group MPLS
-      path-group INET priority 2
-   !
-   load-balance policy LB-TRANSIT-AVT-POLICY-DEFAULT
-      path-group INET
-      path-group LAN_HA
-      path-group MPLS priority 2
 !
 spanning-tree mode none
 !
 no enable password
 no aaa root
 !
-vrf instance ATTRACTED-VRF-FROM-UPLINK
-!
 vrf instance IT
 !
 vrf instance MGMT
 !
-vrf instance NOT-WAN-VRF
-!
 vrf instance PROD
-!
-vrf instance TRANSIT
 !
 ip security
    !
+   ike policy DP-IKE-POLICY
+      local-id 192.168.142.7
+   !
    ike policy CP-IKE-POLICY
-      local-id 192.168.143.2
+      local-id 192.168.142.7
    !
    sa policy DP-SA-POLICY
       esp encryption aes256gcm128
@@ -248,6 +179,7 @@ ip security
       pfs dh-group 14
    !
    profile DP-PROFILE
+      ike-policy DP-IKE-POLICY
       sa-policy DP-SA-POLICY
       connection start
       shared-key 7 ABCDEF1234567890666
@@ -269,74 +201,32 @@ interface Dps1
    description DPS Interface
    mtu 9214
    flow tracker hardware FLOW-TRACKER
-   ip address 192.168.143.2/32
-!
-interface Ethernet1
-   no shutdown
-   no switchport
-!
-interface Ethernet1.42
-   description Comcast
-   no shutdown
-   encapsulation dot1q vlan 42
-   ip address dhcp
-   dhcp client accept default-route
+   ip address 192.168.142.7/32
 !
 interface Ethernet2
+   description Colt_10423
    no shutdown
    no switchport
-!
-interface Ethernet2.42
-   description Colt_10666
-   no shutdown
-   encapsulation dot1q vlan 666
-   ip address 172.16.6.6/31
+   ip address 172.15.6.6/31
 !
 interface Ethernet52
-   description P2P_LINK_TO_SITE-HA-ENABLED-LEAF1_Ethernet2
+   description DIRECT LAN HA LINK
    no shutdown
-   mtu 9214
    no switchport
-   ip address 172.17.0.3/31
-!
-interface Ethernet52.142
-   description P2P_LINK_TO_SITE-HA-ENABLED-LEAF1_Ethernet2.142_vrf_PROD
-   no shutdown
-   mtu 9214
-   encapsulation dot1q vlan 142
-   vrf PROD
-   ip address 172.17.0.3/31
-!
-interface Ethernet52.666
-   description P2P_LINK_TO_SITE-HA-ENABLED-LEAF1_Ethernet2.666_vrf_ATTRACTED-VRF-FROM-UPLINK
-   no shutdown
-   mtu 9214
-   encapsulation dot1q vlan 666
-   vrf ATTRACTED-VRF-FROM-UPLINK
-   ip address 172.17.0.3/31
-!
-interface Ethernet52.1000
-   description P2P_LINK_TO_SITE-HA-ENABLED-LEAF1_Ethernet2.1000_vrf_IT
-   no shutdown
-   mtu 9214
-   encapsulation dot1q vlan 1000
-   vrf IT
-   ip address 172.17.0.3/31
+   ip address 10.10.10.1/31
 !
 interface Loopback0
    description Router_ID
    no shutdown
-   ip address 192.168.43.2/32
+   ip address 192.168.42.7/32
 !
 interface Vxlan1
-   description cv-pathfinder-transit1B_VTEP
+   description cv-pathfinder-edge3B_VTEP
    vxlan source-interface Dps1
    vxlan udp-port 4789
-   vxlan vrf ATTRACTED-VRF-FROM-UPLINK vni 166
    vxlan vrf default vni 1
    vxlan vrf IT vni 100
    vxlan vrf PROD vni 42
-   vxlan vrf TRANSIT vni 66
 !
 application traffic recognition
    !
@@ -384,35 +274,18 @@ application traffic recognition
       42
 !
 ip routing
-ip routing vrf ATTRACTED-VRF-FROM-UPLINK
 ip routing vrf IT
 no ip routing vrf MGMT
-ip routing vrf NOT-WAN-VRF
 ip routing vrf PROD
-ip routing vrf TRANSIT
 !
-ip extcommunity-list ECL-EVPN-SOO permit soo 192.168.43.1:422
+ip extcommunity-list ECL-EVPN-SOO permit soo 192.168.42.6:404
 !
 ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
-   seq 10 permit 192.168.43.0/24 eq 32
-!
-ip prefix-list PL-WAN-HA-PEER-PREFIXES
-   seq 10 permit 172.17.0.0/31
-!
-ip prefix-list PL-WAN-HA-PREFIXES
-   seq 10 permit 172.17.0.2/31
-!
-route-map RM-BGP-UNDERLAY-PEERS-IN permit 10
-   description Allow WAN HA peer interface prefixes
-   match ip address prefix-list PL-WAN-HA-PEER-PREFIXES
-!
-route-map RM-BGP-UNDERLAY-PEERS-IN deny 20
-   description Deny other routes from the HA peer
-   match as-path ASPATH-WAN
+   seq 10 permit 192.168.42.0/24 eq 32
 !
 route-map RM-BGP-UNDERLAY-PEERS-IN permit 40
    description Mark prefixes originated from the LAN
-   set extcommunity soo 192.168.43.1:422 additive
+   set extcommunity soo 192.168.42.6:404 additive
 !
 route-map RM-BGP-UNDERLAY-PEERS-OUT permit 10
    description Make routes learned from WAN HA peer less preferred on LAN routers
@@ -424,10 +297,7 @@ route-map RM-BGP-UNDERLAY-PEERS-OUT permit 20
 !
 route-map RM-CONN-2-BGP permit 10
    match ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
-   set extcommunity soo 192.168.43.1:422 additive
-!
-route-map RM-CONN-2-BGP permit 50
-   match ip address prefix-list PL-WAN-HA-PREFIXES
+   set extcommunity soo 192.168.42.6:404 additive
 !
 route-map RM-EVPN-EXPORT-VRF-DEFAULT permit 10
    match extcommunity ECL-EVPN-SOO
@@ -438,7 +308,7 @@ route-map RM-EVPN-SOO-IN deny 10
 route-map RM-EVPN-SOO-IN permit 20
 !
 route-map RM-EVPN-SOO-OUT permit 10
-   set extcommunity soo 192.168.43.1:422 additive
+   set extcommunity soo 192.168.42.6:404 additive
 !
 route-map RM-WAN-HA-PEER-IN permit 10
    description Set tag 50 on routes received from HA peer over EVPN
@@ -457,12 +327,11 @@ router bfd
    multihop interval 300 min-rx 300 multiplier 3
 !
 router bgp 65000
-   router-id 192.168.43.2
+   router-id 192.168.42.7
    maximum-paths 16
    update wait-install
    no bgp default ipv4-unicast
    neighbor IPv4-UNDERLAY-PEERS peer group
-   neighbor IPv4-UNDERLAY-PEERS allowas-in 1
    neighbor IPv4-UNDERLAY-PEERS send-community
    neighbor IPv4-UNDERLAY-PEERS maximum-routes 12000
    neighbor IPv4-UNDERLAY-PEERS route-map RM-BGP-UNDERLAY-PEERS-IN in
@@ -476,16 +345,13 @@ router bgp 65000
    neighbor WAN-OVERLAY-PEERS password 7 htm4AZe9mIQOO1uiMuGgYQ==
    neighbor WAN-OVERLAY-PEERS send-community
    neighbor WAN-OVERLAY-PEERS maximum-routes 0
-   neighbor 172.17.0.2 peer group IPv4-UNDERLAY-PEERS
-   neighbor 172.17.0.2 remote-as 65199
-   neighbor 172.17.0.2 description site-ha-enabled-leaf1_Ethernet2
-   neighbor 192.168.143.1 remote-as 65000
-   neighbor 192.168.143.1 description cv-pathfinder-transit1A
-   neighbor 192.168.143.1 route-reflector-client
-   neighbor 192.168.143.1 update-source Dps1
-   neighbor 192.168.143.1 route-map RM-WAN-HA-PEER-IN in
-   neighbor 192.168.143.1 route-map RM-WAN-HA-PEER-OUT out
-   neighbor 192.168.143.1 send-community
+   neighbor 192.168.142.6 remote-as 65000
+   neighbor 192.168.142.6 description cv-pathfinder-edge3A
+   neighbor 192.168.142.6 route-reflector-client
+   neighbor 192.168.142.6 update-source Dps1
+   neighbor 192.168.142.6 route-map RM-WAN-HA-PEER-IN in
+   neighbor 192.168.142.6 route-map RM-WAN-HA-PEER-OUT out
+   neighbor 192.168.142.6 send-community
    neighbor 192.168.144.1 peer group WAN-OVERLAY-PEERS
    neighbor 192.168.144.1 description cv-pathfinder-pathfinder
    redistribute connected route-map RM-CONN-2-BGP
@@ -494,7 +360,7 @@ router bgp 65000
       neighbor WAN-OVERLAY-PEERS route-map RM-EVPN-SOO-IN in
       neighbor WAN-OVERLAY-PEERS route-map RM-EVPN-SOO-OUT out
       neighbor WAN-OVERLAY-PEERS activate
-      neighbor 192.168.143.1 activate
+      neighbor 192.168.142.6 activate
       neighbor default next-hop-self received-evpn-routes route-type ip-prefix
    !
    address-family ipv4
@@ -513,51 +379,24 @@ router bgp 65000
       bgp additional-paths send any
       neighbor WAN-OVERLAY-PEERS activate
    !
-   vrf ATTRACTED-VRF-FROM-UPLINK
-      rd 192.168.43.2:666
-      route-target import evpn 666:666
-      route-target export evpn 666:666
-      router-id 192.168.43.2
-      neighbor 172.17.0.2 remote-as 65199
-      neighbor 172.17.0.2 peer group IPv4-UNDERLAY-PEERS
-      neighbor 172.17.0.2 description site-ha-enabled-leaf1_Ethernet2.666_vrf_ATTRACTED-VRF-FROM-UPLINK
-      redistribute connected
-   !
    vrf default
-      rd 192.168.43.2:1
+      rd 192.168.42.7:1
       route-target import evpn 1:1
       route-target export evpn 1:1
       route-target export evpn route-map RM-EVPN-EXPORT-VRF-DEFAULT
    !
    vrf IT
-      rd 192.168.43.2:1000
+      rd 192.168.42.7:1000
       route-target import evpn 1000:1000
       route-target export evpn 1000:1000
-      router-id 192.168.43.2
-      neighbor 172.17.0.2 remote-as 65199
-      neighbor 172.17.0.2 peer group IPv4-UNDERLAY-PEERS
-      neighbor 172.17.0.2 description site-ha-enabled-leaf1_Ethernet2.1000_vrf_IT
-      redistribute connected
-   !
-   vrf NOT-WAN-VRF
-      router-id 192.168.43.2
+      router-id 192.168.42.7
       redistribute connected
    !
    vrf PROD
-      rd 192.168.43.2:142
+      rd 192.168.42.7:142
       route-target import evpn 142:142
       route-target export evpn 142:142
-      router-id 192.168.43.2
-      neighbor 172.17.0.2 remote-as 65199
-      neighbor 172.17.0.2 peer group IPv4-UNDERLAY-PEERS
-      neighbor 172.17.0.2 description site-ha-enabled-leaf1_Ethernet2.142_vrf_PROD
-      redistribute connected
-   !
-   vrf TRANSIT
-      rd 192.168.43.2:66
-      route-target import evpn 66:66
-      route-target export evpn 66:66
-      router-id 192.168.43.2
+      router-id 192.168.42.7
       redistribute connected
 !
 router traffic-engineering
@@ -577,12 +416,6 @@ management security
 !
 stun
    client
-      server-profile INET-cv-pathfinder-pathfinder-Ethernet1
-         ip address 172.17.7.7
-         ssl profile profileA
-      server-profile INET-cv-pathfinder-pathfinder-Ethernet3
-         ip address 10.9.9.9
-         ssl profile profileA
       server-profile MPLS-cv-pathfinder-pathfinder-Ethernet2_2
          ip address 172.16.0.1
          ssl profile profileA
