--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit1A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit1A.cfg
@@ -440,19 +440,21 @@ route-map RM-BGP-UNDERLAY-PEERS-IN permit 10
    description Allow WAN HA peer interface prefixes
    match ip address prefix-list PL-WAN-HA-PEER-PREFIXES
 !
-route-map RM-BGP-UNDERLAY-PEERS-IN permit 20
-   description Allow prefixes originated from the HA peer
-   match extcommunity ECL-EVPN-SOO
-   set as-path match all replacement auto auto
-!
-route-map RM-BGP-UNDERLAY-PEERS-IN permit 30
-   description Use WAN routes from HA peer as backup
+route-map RM-BGP-UNDERLAY-PEERS-IN deny 20
+   description Deny other routes from the HA peer
    match as-path ASPATH-WAN
-   set community no-advertise
 !
 route-map RM-BGP-UNDERLAY-PEERS-IN permit 40
    description Mark prefixes originated from the LAN
    set extcommunity soo 192.168.43.1:422 additive
+!
+route-map RM-BGP-UNDERLAY-PEERS-OUT permit 10
+   description Make routes learned from WAN HA peer less preferred on LAN routers
+   match route-type internal
+   match tag 50
+   set metric 50
+!
+route-map RM-BGP-UNDERLAY-PEERS-OUT permit 20
 !
 route-map RM-CONN-2-BGP permit 10
    match ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
@@ -472,6 +474,19 @@ route-map RM-EVPN-SOO-IN permit 20
 route-map RM-EVPN-SOO-OUT permit 10
    set extcommunity soo 192.168.43.1:422 additive
 !
+route-map RM-WAN-HA-PEER-IN permit 10
+   description Set tag 50 on routes received from HA peer over EVPN
+   set tag 50
+!
+route-map RM-WAN-HA-PEER-OUT permit 10
+   description Make EVPN routes learned from WAN less preferred on HA peer
+   match route-type internal
+   set local-preference 50
+!
+route-map RM-WAN-HA-PEER-OUT permit 20
+   description Make locally injected routes less preferred on HA peer
+   set local-preference 75
+!
 router bfd
    multihop interval 300 min-rx 300 multiplier 3
 !
@@ -485,6 +500,7 @@ router bgp 65000
    neighbor IPv4-UNDERLAY-PEERS send-community
    neighbor IPv4-UNDERLAY-PEERS maximum-routes 12000
    neighbor IPv4-UNDERLAY-PEERS route-map RM-BGP-UNDERLAY-PEERS-IN in
+   neighbor IPv4-UNDERLAY-PEERS route-map RM-BGP-UNDERLAY-PEERS-OUT out
    neighbor WAN-OVERLAY-PEERS peer group
    neighbor WAN-OVERLAY-PEERS remote-as 65000
    neighbor WAN-OVERLAY-PEERS update-source Dps1
@@ -497,6 +513,13 @@ router bgp 65000
    neighbor 172.17.0.0 peer group IPv4-UNDERLAY-PEERS
    neighbor 172.17.0.0 remote-as 65199
    neighbor 172.17.0.0 description site-ha-enabled-leaf1_Ethernet1
+   neighbor 192.168.143.2 remote-as 65000
+   neighbor 192.168.143.2 description cv-pathfinder-transit1B
+   neighbor 192.168.143.2 route-reflector-client
+   neighbor 192.168.143.2 update-source Dps1
+   neighbor 192.168.143.2 route-map RM-WAN-HA-PEER-IN in
+   neighbor 192.168.143.2 route-map RM-WAN-HA-PEER-OUT out
+   neighbor 192.168.143.2 send-community
    neighbor 192.168.144.1 peer group WAN-OVERLAY-PEERS
    neighbor 192.168.144.1 description cv-pathfinder-pathfinder
    redistribute connected route-map RM-CONN-2-BGP
@@ -505,6 +528,8 @@ router bgp 65000
       neighbor WAN-OVERLAY-PEERS route-map RM-EVPN-SOO-IN in
       neighbor WAN-OVERLAY-PEERS route-map RM-EVPN-SOO-OUT out
       neighbor WAN-OVERLAY-PEERS activate
+      neighbor 192.168.143.2 activate
+      neighbor default next-hop-self received-evpn-routes route-type ip-prefix
    !
    address-family ipv4
       neighbor IPv4-UNDERLAY-PEERS activate
