--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge3A.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge3A.yml
@@ -1,8 +1,8 @@
-hostname: cv-pathfinder-transit1B
+hostname: cv-pathfinder-edge3A
 is_deployed: true
 router_bgp:
   as: '65000'
-  router_id: 192.168.43.2
+  router_id: 192.168.42.6
   bgp:
     default:
       ipv4_unicast: false
@@ -17,9 +17,6 @@ router_bgp:
     send_community: all
     route_map_in: RM-BGP-UNDERLAY-PEERS-IN
     route_map_out: RM-BGP-UNDERLAY-PEERS-OUT
-    allowas_in:
-      enabled: true
-      times: 1
   - name: WAN-OVERLAY-PEERS
     type: wan
     update_source: Dps1
@@ -42,113 +39,6 @@ router_bgp:
   redistribute_routes:
   - source_protocol: connected
     route_map: RM-CONN-2-BGP
-  neighbors:
-  - ip_address: 172.17.0.2
-    peer_group: IPv4-UNDERLAY-PEERS
-    remote_as: '65199'
-    peer: site-ha-enabled-leaf1
-    description: site-ha-enabled-leaf1_Ethernet2
-  - ip_address: 192.168.144.1
-    peer_group: WAN-OVERLAY-PEERS
-    peer: cv-pathfinder-pathfinder
-    description: cv-pathfinder-pathfinder
-  - ip_address: 192.168.143.1
-    peer: cv-pathfinder-transit1A
-    description: cv-pathfinder-transit1A
-    remote_as: '65000'
-    update_source: Dps1
-    route_reflector_client: true
-    send_community: all
-    route_map_in: RM-WAN-HA-PEER-IN
-    route_map_out: RM-WAN-HA-PEER-OUT
-  vrfs:
-  - name: IT
-    router_id: 192.168.43.2
-    neighbors:
-    - ip_address: 172.17.0.2
-      peer_group: IPv4-UNDERLAY-PEERS
-      remote_as: '65199'
-      description: site-ha-enabled-leaf1_Ethernet2.1000_vrf_IT
-    rd: 192.168.43.2:1000
-    route_targets:
-      import:
-      - address_family: evpn
-        route_targets:
-        - 1000:1000
-      export:
-      - address_family: evpn
-        route_targets:
-        - 1000:1000
-    redistribute_routes:
-    - source_protocol: connected
-  - name: PROD
-    router_id: 192.168.43.2
-    neighbors:
-    - ip_address: 172.17.0.2
-      peer_group: IPv4-UNDERLAY-PEERS
-      remote_as: '65199'
-      description: site-ha-enabled-leaf1_Ethernet2.142_vrf_PROD
-    rd: 192.168.43.2:142
-    route_targets:
-      import:
-      - address_family: evpn
-        route_targets:
-        - 142:142
-      export:
-      - address_family: evpn
-        route_targets:
-        - 142:142
-    redistribute_routes:
-    - source_protocol: connected
-  - name: ATTRACTED-VRF-FROM-UPLINK
-    router_id: 192.168.43.2
-    neighbors:
-    - ip_address: 172.17.0.2
-      peer_group: IPv4-UNDERLAY-PEERS
-      remote_as: '65199'
-      description: site-ha-enabled-leaf1_Ethernet2.666_vrf_ATTRACTED-VRF-FROM-UPLINK
-    rd: 192.168.43.2:666
-    route_targets:
-      import:
-      - address_family: evpn
-        route_targets:
-        - 666:666
-      export:
-      - address_family: evpn
-        route_targets:
-        - 666:666
-    redistribute_routes:
-    - source_protocol: connected
-  - name: default
-    rd: 192.168.43.2:1
-    route_targets:
-      import:
-      - address_family: evpn
-        route_targets:
-        - '1:1'
-      export:
-      - address_family: evpn
-        route_targets:
-        - '1:1'
-        - route-map RM-EVPN-EXPORT-VRF-DEFAULT
-  - name: NOT-WAN-VRF
-    router_id: 192.168.43.2
-    redistribute_routes:
-    - source_protocol: connected
-  - name: TRANSIT
-    router_id: 192.168.43.2
-    rd: 192.168.43.2:66
-    route_targets:
-      import:
-      - address_family: evpn
-        route_targets:
-        - 66:66
-      export:
-      - address_family: evpn
-        route_targets:
-        - 66:66
-    redistribute_routes:
-    - source_protocol: connected
   address_family_evpn:
     peer_groups:
     - name: WAN-OVERLAY-PEERS
@@ -159,7 +49,7 @@ router_bgp:
       next_hop_self_received_evpn_routes:
         enable: true
     neighbors:
-    - ip_address: 192.168.143.1
+    - ip_address: 192.168.142.7
       activate: true
   address_family_ipv4_sr_te:
     peer_groups:
@@ -181,6 +71,61 @@ router_bgp:
         receive: true
         send:
           any: true
+  neighbors:
+  - ip_address: 192.168.144.1
+    peer_group: WAN-OVERLAY-PEERS
+    peer: cv-pathfinder-pathfinder
+    description: cv-pathfinder-pathfinder
+  - ip_address: 192.168.142.7
+    peer: cv-pathfinder-edge3B
+    description: cv-pathfinder-edge3B
+    remote_as: '65000'
+    update_source: Dps1
+    route_reflector_client: true
+    send_community: all
+    route_map_in: RM-WAN-HA-PEER-IN
+    route_map_out: RM-WAN-HA-PEER-OUT
+  vrfs:
+  - name: default
+    rd: 192.168.42.6:1
+    route_targets:
+      import:
+      - address_family: evpn
+        route_targets:
+        - '1:1'
+      export:
+      - address_family: evpn
+        route_targets:
+        - '1:1'
+        - route-map RM-EVPN-EXPORT-VRF-DEFAULT
+  - name: IT
+    router_id: 192.168.42.6
+    rd: 192.168.42.6:1000
+    route_targets:
+      import:
+      - address_family: evpn
+        route_targets:
+        - 1000:1000
+      export:
+      - address_family: evpn
+        route_targets:
+        - 1000:1000
+    redistribute_routes:
+    - source_protocol: connected
+  - name: PROD
+    router_id: 192.168.42.6
+    rd: 192.168.42.6:142
+    route_targets:
+      import:
+      - address_family: evpn
+        route_targets:
+        - 142:142
+      export:
+      - address_family: evpn
+        route_targets:
+        - 142:142
+    redistribute_routes:
+    - source_protocol: connected
 service_routing_protocols_model: multi-agent
 ip_routing: true
 transceiver_qsfp_default_mode_4x10: false
@@ -195,109 +140,36 @@ vrfs:
 - name: PROD
   tenant: TenantA
   ip_routing: true
-- name: NOT-WAN-VRF
-  tenant: TenantB
-  ip_routing: true
-- name: TRANSIT
-  tenant: TenantB
-  ip_routing: true
-- name: ATTRACTED-VRF-FROM-UPLINK
-  tenant: TenantC
-  ip_routing: true
 management_api_http:
   enable_vrfs:
   - name: MGMT
   enable_https: true
 ethernet_interfaces:
-- name: Ethernet52
-  peer: site-ha-enabled-leaf1
-  peer_interface: Ethernet2
-  peer_type: l3leaf
-  description: P2P_LINK_TO_SITE-HA-ENABLED-LEAF1_Ethernet2
-  shutdown: false
-  mtu: 9214
-  type: routed
-  ip_address: 172.17.0.3/31
-- name: Ethernet52.1000
-  peer: site-ha-enabled-leaf1
-  peer_interface: Ethernet2.1000
-  peer_type: l3leaf
-  vrf: IT
-  description: P2P_LINK_TO_SITE-HA-ENABLED-LEAF1_Ethernet2.1000_vrf_IT
-  shutdown: false
-  type: l3dot1q
-  encapsulation_dot1q_vlan: 1000
-  mtu: 9214
-  ip_address: 172.17.0.3/31
-- name: Ethernet52.142
-  peer: site-ha-enabled-leaf1
-  peer_interface: Ethernet2.142
-  peer_type: l3leaf
-  vrf: PROD
-  description: P2P_LINK_TO_SITE-HA-ENABLED-LEAF1_Ethernet2.142_vrf_PROD
-  shutdown: false
-  type: l3dot1q
-  encapsulation_dot1q_vlan: 142
-  mtu: 9214
-  ip_address: 172.17.0.3/31
-- name: Ethernet52.666
-  peer: site-ha-enabled-leaf1
-  peer_interface: Ethernet2.666
-  peer_type: l3leaf
-  vrf: ATTRACTED-VRF-FROM-UPLINK
-  description: P2P_LINK_TO_SITE-HA-ENABLED-LEAF1_Ethernet2.666_vrf_ATTRACTED-VRF-FROM-UPLINK
-  shutdown: false
-  type: l3dot1q
-  encapsulation_dot1q_vlan: 666
-  mtu: 9214
-  ip_address: 172.17.0.3/31
-- name: Ethernet1.42
+- name: Ethernet1
   peer_type: l3_interface
   ip_address: dhcp
   shutdown: false
-  type: l3dot1q
-  description: Comcast
-  encapsulation_dot1q_vlan: 42
+  type: routed
+  description: ATT_404-01
   dhcp_client_accept_default_route: true
-- name: Ethernet2.42
-  peer_type: l3_interface
-  ip_address: 172.16.6.6/31
-  shutdown: false
-  type: l3dot1q
-  description: Colt_10666
-  encapsulation_dot1q_vlan: 666
-- name: Ethernet1
+- name: Ethernet52
   type: routed
   peer_type: l3_interface
+  peer: cv-pathfinder-edge3B
   shutdown: false
-- name: Ethernet2
-  type: routed
-  peer_type: l3_interface
-  shutdown: false
+  description: DIRECT LAN HA LINK
+  ip_address: 10.10.10.0/31
+  flow_tracker: null
 loopback_interfaces:
 - name: Loopback0
   description: Router_ID
   shutdown: false
-  ip_address: 192.168.43.2/32
-as_path:
-  access_lists:
-  - name: ASPATH-WAN
-    entries:
-    - type: permit
-      match: '65000'
+  ip_address: 192.168.42.6/32
 prefix_lists:
 - name: PL-LOOPBACKS-EVPN-OVERLAY
   sequence_numbers:
   - sequence: 10
-    action: permit 192.168.43.0/24 eq 32
-- name: PL-WAN-HA-PREFIXES
-  sequence_numbers:
-  - sequence: 10
-    action: permit 172.17.0.2/31
-- name: PL-WAN-HA-PEER-PREFIXES
-  sequence_numbers:
-  - sequence: 10
-    action: permit 172.17.0.0/31
+    action: permit 192.168.42.0/24 eq 32
 route_maps:
 - name: RM-CONN-2-BGP
   sequence_numbers:
@@ -306,28 +178,14 @@ route_maps:
     match:
     - ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
     set:
-    - extcommunity soo 192.168.43.1:422 additive
-  - sequence: 50
-    type: permit
-    match:
-    - ip address prefix-list PL-WAN-HA-PREFIXES
+    - extcommunity soo 192.168.42.6:404 additive
 - name: RM-BGP-UNDERLAY-PEERS-IN
   sequence_numbers:
   - sequence: 40
     type: permit
     description: Mark prefixes originated from the LAN
     set:
-    - extcommunity soo 192.168.43.1:422 additive
-  - sequence: 10
-    type: permit
-    description: Allow WAN HA peer interface prefixes
-    match:
-    - ip address prefix-list PL-WAN-HA-PEER-PREFIXES
-  - sequence: 20
-    type: deny
-    description: Deny other routes from the HA peer
-    match:
-    - as-path ASPATH-WAN
+    - extcommunity soo 192.168.42.6:404 additive
 - name: RM-BGP-UNDERLAY-PEERS-OUT
   sequence_numbers:
   - sequence: 10
@@ -353,7 +211,7 @@ route_maps:
   - sequence: 10
     type: permit
     set:
-    - extcommunity soo 192.168.43.1:422 additive
+    - extcommunity soo 192.168.42.6:404 additive
 - name: RM-WAN-HA-PEER-IN
   sequence_numbers:
   - sequence: 10
@@ -390,11 +248,13 @@ ip_extcommunity_lists:
 - name: ECL-EVPN-SOO
   entries:
   - type: permit
-    extcommunities: soo 192.168.43.1:422
+    extcommunities: soo 192.168.42.6:404
 ip_security:
   ike_policies:
+  - name: DP-IKE-POLICY
+    local_id: 192.168.142.6
   - name: CP-IKE-POLICY
-    local_id: 192.168.143.2
+    local_id: 192.168.142.6
   sa_policies:
   - name: DP-SA-POLICY
     esp:
@@ -406,6 +266,7 @@ ip_security:
     pfs_dh_group: 14
   profiles:
   - name: DP-PROFILE
+    ike_policy: DP-IKE-POLICY
     sa_policy: DP-SA-POLICY
     connection: start
     shared_key: ABCDEF1234567890666
@@ -437,7 +298,7 @@ management_security:
       - aristaDeviceCertProvisionerDefaultRootCA.crt
     tls_versions: '1.2'
 router_adaptive_virtual_topology:
-  topology_role: transit region
+  topology_role: edge
   region:
     name: AVD_Land_West
     id: 42
@@ -445,8 +306,8 @@ router_adaptive_virtual_topology:
     name: AVD_Land_West-ZONE
     id: 1
   site:
-    name: Site422
-    id: 422
+    name: Site404
+    id: 404
   profiles:
   - name: DEFAULT-AVT-POLICY-CONTROL-PLANE
     load_balance_policy: LB-DEFAULT-AVT-POLICY-CONTROL-PLANE
@@ -458,16 +319,8 @@ router_adaptive_virtual_topology:
     load_balance_policy: LB-PROD-AVT-POLICY-VOICE
   - name: PROD-AVT-POLICY-VIDEO
     load_balance_policy: LB-PROD-AVT-POLICY-VIDEO
-  - name: PROD-AVT-POLICY-MPLS-ONLY
-    load_balance_policy: LB-PROD-AVT-POLICY-MPLS-ONLY
   - name: PROD-AVT-POLICY-DEFAULT
     load_balance_policy: LB-PROD-AVT-POLICY-DEFAULT
-  - name: CUSTOM-VOICE-PROFILE-NAME
-    load_balance_policy: LB-CUSTOM-VOICE-PROFILE-NAME
-  - name: TRANSIT-AVT-POLICY-DEFAULT
-    load_balance_policy: LB-TRANSIT-AVT-POLICY-DEFAULT
-  - name: DEFAULT-POLICY-DEFAULT
-    load_balance_policy: LB-DEFAULT-POLICY-DEFAULT
   vrfs:
   - name: default
     policy: DEFAULT-AVT-POLICY-WITH-CP
@@ -485,8 +338,6 @@ router_adaptive_virtual_topology:
       id: 2
     - name: PROD-AVT-POLICY-VIDEO
       id: 4
-    - name: PROD-AVT-POLICY-MPLS-ONLY
-      id: 5
     - name: PROD-AVT-POLICY-DEFAULT
       id: 1
   - name: IT
@@ -495,18 +346,6 @@ router_adaptive_virtual_topology:
     - name: DEFAULT-AVT-POLICY-VIDEO
       id: 3
     - name: DEFAULT-AVT-POLICY-DEFAULT
-      id: 1
-  - name: TRANSIT
-    policy: TRANSIT-AVT-POLICY
-    profiles:
-    - name: CUSTOM-VOICE-PROFILE-NAME
-      id: 42
-    - name: TRANSIT-AVT-POLICY-DEFAULT
-      id: 1
-  - name: ATTRACTED-VRF-FROM-UPLINK
-    policy: DEFAULT-POLICY
-    profiles:
-    - name: DEFAULT-POLICY-DEFAULT
       id: 1
   policies:
   - name: DEFAULT-AVT-POLICY-WITH-CP
@@ -523,8 +362,6 @@ router_adaptive_virtual_topology:
       avt_profile: PROD-AVT-POLICY-VOICE
     - application_profile: VIDEO
       avt_profile: PROD-AVT-POLICY-VIDEO
-    - application_profile: MPLS-ONLY
-      avt_profile: PROD-AVT-POLICY-MPLS-ONLY
     - application_profile: default
       avt_profile: PROD-AVT-POLICY-DEFAULT
   - name: DEFAULT-AVT-POLICY
@@ -533,16 +370,6 @@ router_adaptive_virtual_topology:
       avt_profile: DEFAULT-AVT-POLICY-VIDEO
     - application_profile: default
       avt_profile: DEFAULT-AVT-POLICY-DEFAULT
-  - name: TRANSIT-AVT-POLICY
-    matches:
-    - application_profile: VOICE
-      avt_profile: CUSTOM-VOICE-PROFILE-NAME
-    - application_profile: default
-      avt_profile: TRANSIT-AVT-POLICY-DEFAULT
-  - name: DEFAULT-POLICY
-    matches:
-    - application_profile: default
-      avt_profile: DEFAULT-POLICY-DEFAULT
 router_bfd:
   multihop:
     interval: 300
@@ -555,7 +382,7 @@ router_path_selection:
   - name: INET
     id: 101
     local_interfaces:
-    - name: Ethernet1.42
+    - name: Ethernet1
       stun:
         server_profiles:
         - INET-cv-pathfinder-pathfinder-Ethernet1
@@ -569,54 +396,32 @@ router_path_selection:
       - 172.17.7.7
       - 10.9.9.9
     ipsec_profile: CP-PROFILE
-  - name: MPLS
-    id: 100
-    local_interfaces:
-    - name: Ethernet2.42
-      stun:
-        server_profiles:
-        - MPLS-cv-pathfinder-pathfinder-Ethernet2_2
-    dynamic_peers:
-      enabled: true
-      ipsec: false
-    static_peers:
-    - router_ip: 192.168.144.1
-      name: cv-pathfinder-pathfinder
-      ipv4_addresses:
-      - 172.16.0.1
-    keepalive:
-      interval: 300
-      failure_threshold: 5
   - name: LAN_HA
     id: 65535
     flow_assignment: lan
     local_interfaces:
     - name: Ethernet52
     static_peers:
-    - router_ip: 192.168.143.1
-      name: cv-pathfinder-transit1A
+    - router_ip: 192.168.142.7
+      name: cv-pathfinder-edge3B
       ipv4_addresses:
-      - 172.17.0.1
+      - 10.10.10.1
+    ipsec_profile: DP-PROFILE
   load_balance_policies:
   - name: LB-DEFAULT-AVT-POLICY-CONTROL-PLANE
     path_groups:
     - name: INET
-    - name: MPLS
     - name: LAN_HA
   - name: LB-DEFAULT-AVT-POLICY-VIDEO
     path_groups:
-    - name: MPLS
     - name: INET
     - name: LAN_HA
   - name: LB-DEFAULT-AVT-POLICY-DEFAULT
     path_groups:
     - name: INET
-    - name: MPLS
-      priority: 4223
     - name: LAN_HA
   - name: LB-PROD-AVT-POLICY-VOICE
     path_groups:
-    - name: MPLS
     - name: INET
       priority: 2
     - name: LAN_HA
@@ -624,37 +429,13 @@ router_path_selection:
     lowest_hop_count: true
   - name: LB-PROD-AVT-POLICY-VIDEO
     path_groups:
-    - name: MPLS
     - name: INET
       priority: 2
     - name: LAN_HA
     loss_rate: '42.0'
-  - name: LB-PROD-AVT-POLICY-MPLS-ONLY
-    path_groups:
-    - name: MPLS
-    - name: LAN_HA
   - name: LB-PROD-AVT-POLICY-DEFAULT
     path_groups:
     - name: INET
-    - name: MPLS
-      priority: 2
-    - name: LAN_HA
-  - name: LB-CUSTOM-VOICE-PROFILE-NAME
-    path_groups:
-    - name: MPLS
-    - name: INET
-      priority: 2
-    - name: LAN_HA
-  - name: LB-TRANSIT-AVT-POLICY-DEFAULT
-    path_groups:
-    - name: INET
-    - name: MPLS
-      priority: 2
-    - name: LAN_HA
-  - name: LB-DEFAULT-POLICY-DEFAULT
-    path_groups:
-    - name: INET
-    - name: MPLS
     - name: LAN_HA
 router_traffic_engineering:
   enabled: true
@@ -667,9 +448,6 @@ stun:
     - name: INET-cv-pathfinder-pathfinder-Ethernet3
       ip_address: 10.9.9.9
       ssl_profile: profileA
-    - name: MPLS-cv-pathfinder-pathfinder-Ethernet2_2
-      ip_address: 172.16.0.1
-      ssl_profile: profileA
 application_traffic_recognition:
   application_profiles:
   - name: VIDEO
@@ -681,7 +459,6 @@ application_traffic_recognition:
   - name: VOICE
     applications:
     - name: CUSTOM-VOICE-APPLICATION
-  - name: MPLS-ONLY
   - name: APP-PROFILE-CONTROL-PLANE
     applications:
     - name: APP-CONTROL-PLANE
@@ -727,12 +504,12 @@ dps_interfaces:
 - name: Dps1
   description: DPS Interface
   mtu: 9214
-  ip_address: 192.168.143.2/32
+  ip_address: 192.168.142.6/32
   flow_tracker:
     hardware: FLOW-TRACKER
 vxlan_interface:
   Vxlan1:
-    description: cv-pathfinder-transit1B_VTEP
+    description: cv-pathfinder-edge3A_VTEP
     vxlan:
       udp_port: 4789
       source_interface: Dps1
@@ -743,10 +520,6 @@ vxlan_interface:
         vni: 100
       - name: PROD
         vni: 42
-      - name: TRANSIT
-        vni: 66
-      - name: ATTRACTED-VRF-FROM-UPLINK
-        vni: 166
 flow_tracking:
   hardware:
     trackers:
@@ -765,66 +538,37 @@ metadata:
   cv_tags:
     device_tags:
     - name: Role
-      value: transit region
+      value: edge
     - name: Region
       value: AVD_Land_West
     - name: Zone
       value: AVD_Land_West-ZONE
     - name: Site
-      value: Site422
+      value: Site404
     interface_tags:
+    - interface: Ethernet1
+      tags:
+      - name: Type
+        value: wan
+      - name: Carrier
+        value: ATT
+      - name: Circuit
+        value: 404-01
     - interface: Ethernet52
       tags:
       - name: Type
         value: lan
-    - interface: Ethernet52.1000
-      tags:
-      - name: Type
-        value: lan
-    - interface: Ethernet52.142
-      tags:
-      - name: Type
-        value: lan
-    - interface: Ethernet52.666
-      tags:
-      - name: Type
-        value: lan
-    - interface: Ethernet1.42
-      tags:
-      - name: Type
-        value: wan
-      - name: Carrier
-        value: Comcast
-    - interface: Ethernet2.42
-      tags:
-      - name: Type
-        value: wan
-      - name: Carrier
-        value: Colt
-      - name: Circuit
-        value: '10666'
-    - interface: Ethernet1
-      tags:
-      - name: Type
-        value: lan
-    - interface: Ethernet2
-      tags:
-      - name: Type
-        value: lan
   cv_pathfinder:
-    role: transit region
+    role: edge
     ssl_profile: profileA
-    vtep_ip: 192.168.143.2
+    vtep_ip: 192.168.142.6
     region: AVD_Land_West
     zone: AVD_Land_West-ZONE
-    site: Site422
+    site: Site404
     interfaces:
-    - name: Ethernet1.42
-      carrier: Comcast
+    - name: Ethernet1
+      carrier: ATT
+      circuit_id: 404-01
       pathgroup: INET
-    - name: Ethernet2.42
-      carrier: Colt
-      circuit_id: '10666'
-      pathgroup: MPLS
     pathfinders:
     - vtep_ip: 192.168.144.1
