Doc: Semantic Versioning (#3417)
Co-authored-by: JulioPDX <julioperez@arista.com>
Co-authored-by: Claus Holbech <holbech@arista.com>
Co-authored-by: Guillaume Mulocher <gmulocher@arista.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -184,6 +184,7 @@ nav:
   - Release Notes: docs/release-notes/4.x.x.md
   - Porting Guide: docs/porting-guides/4.x.x.md
   - PyAVD: docs/pyavd.md
+  - Versioning: docs/semantic-versioning.md
   - AVD Dev Containers:
       - Overview: docs/containers/overview.md
   - About:
