Feat(eos_designs): Rename  key to  to avoid conflicting variable with eos_cli_config_gen

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/PTP_TESTS_L2LEAFS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/PTP_TESTS_L2LEAFS.yml
@@ -36,3 +36,11 @@ l2leaf:
         enabled: true
       uplink_ptp:
         enable: false
+
+    - name: ptp-tests-l2leaf2-ptp-settings-key
+      id: 4
+      uplink_switch_interfaces:
+        - Ethernet16
+        - Ethernet16
+      ptp:
+        enabled: true
