Adding switchport configs for ethernet-interfaces

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
@@ -58,6 +58,13 @@ ethernet_interfaces:
         - from: 23-37
           to: 45
           direction: out
+      backup_link_interface: Ethernet5
+      backup:
+        dest_macaddr: 01:00:00:00:00:00
+        mac_move_burst: 20
+        mac_move_burst_interval: 30
+        initial_mac_move_delay: 10
+        preemption_delay: 35
     eos_cli: |
       comment
       Comment created from eos_cli under ethernet_interfaces.Ethernet1
