--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
@@ -28,6 +28,12 @@ interface Ethernet1
    switchport vlan translation out 23-37 45
    switchport trunk private-vlan secondary
    switchport pvlan mapping 20-30
+   switchport backup-link Ethernet5
+   switchport backup preemption-delay 35
+   switchport backup mac-move-burst 20
+   switchport backup mac-move-burst-interval 30
+   switchport backup initial-mac-move-delay 10
+   switchport backup dest-macaddr 01:00:00:00:00:00
    ip address 172.31.255.1/31
    ip verify unicast source reachable-via rx
    bfd interval 500 min-rx 500 multiplier 5
