Adding switchport config to port-channel-interfaces

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/port-channel-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/port-channel-interfaces.cfg
@@ -165,6 +165,24 @@ interface Port-Channel99
 interface Port-Channel100
    logging event link-status
    no switchport
+   switchport access vlan 200
+   switchport trunk native vlan tag
+   switchport phone vlan 110
+   switchport phone trunk tagged
+   switchport trunk allowed vlan 10-11
+   switchport mode dot1q-tunnel
+   switchport trunk group g1
+   switchport trunk group g2
+   switchport vlan translation in 23-37 45
+   switchport vlan translation out 23-37 45
+   switchport trunk private-vlan secondary
+   switchport pvlan mapping 20-30
+   switchport backup-link Ethernet5
+   switchport backup preemption-delay 35
+   switchport backup mac-move-burst 20
+   switchport backup mac-move-burst-interval 30
+   switchport backup initial-mac-move-delay 10
+   switchport backup dest-macaddr 01:00:00:00:00:00
 !
 interface Port-Channel100.101
    description IFL for TENANT01
