--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/port-channel-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/port-channel-interfaces.yml
@@ -113,6 +113,38 @@ port_channel_interfaces:
     logging:
       event:
         link_status: true
+    switchport:
+      port_security:
+        enabled: true
+      trunk:
+        allowed_vlans: 10-11
+        native_vlan: 5
+        native_vlan_tag: true
+        groups:
+          - g1
+          - g2
+        private_vlan_secondary: true
+      access_vlan: 200
+      phone:
+        vlan: 110
+        trunk: tagged
+      mode: dot1q-tunnel
+      pvlan_mapping: 20-30
+      vlan_translations:
+        - from: 23-37
+          to: 45
+          direction: in
+        - from: 23-37
+          to: 45
+          direction: out
+      backup_link_interface: Ethernet5
+      backup:
+        dest_macaddr: 01:00:00:00:00:00
+        mac_move_burst: 20
+        mac_move_burst_interval: 30
+        initial_mac_move_delay: 10
+        preemption_delay: 35
+
   - name: Port-Channel100.101
     type: l3dot1q
     logging:
@@ -122,6 +154,7 @@ port_channel_interfaces:
     mtu: 1500
     ip_address: 10.1.1.3/31
     encapsulation_dot1q_vlan: 101
+
   - name: Port-Channel100.102
     type: l3dot1q
     logging:
