Adding missing keys

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
@@ -21,14 +21,16 @@ interface Ethernet1
    switchport phone trunk tagged
    switchport trunk allowed vlan 10-11
    switchport mode dot1q-tunnel
+   switchport vlan forwarding accept all
    switchport trunk group g1
    switchport trunk group g2
    no switchport
+   switchport source-interface tx
    switchport vlan translation in 23-37 45
    switchport vlan translation out 23-37 45
    switchport trunk private-vlan secondary
    switchport pvlan mapping 20-30
-   switchport backup-link Ethernet5
+   switchport backup-link Ethernet5 prefer vlan 10
    switchport backup preemption-delay 35
    switchport backup mac-move-burst 20
    switchport backup mac-move-burst-interval 30
