--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/l3_edge_isis.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/l3_edge_isis.cfg
@@ -82,6 +82,8 @@ router isis EVPN_UNDERLAY
    is-type level-2
    router-id ipv4 1.2.3.1
    log-adjacency-changes
+   authentication mode md5
+   authentication key 0 password
    !
    address-family ipv4 unicast
       maximum-paths 4
