--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
@@ -209,13 +209,8 @@ ethernet_interfaces:
     isis_network_point_to_point: true
     isis_circuit_type: level-2
     isis_hello_padding: false
-    isis_authentication_mode: shared-secret
+    isis_authentication_mode: md5
     isis_authentication_key: "asfddja23452"
-    isis_authentication_parameters:
-      both:
-        shared_secret:
-          profile: "profile1"
-          algorithm: "sha-1"
     spanning_tree_guard: loop
 
   - name: Ethernet6
