--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/core-1-isis-sr-ldp.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/core-1-isis-sr-ldp.yml
@@ -46,6 +46,7 @@ router_isis:
     maximum_paths: 4
     fast_reroute_ti_lfa:
       mode: link-protection
+  authentication: null
   mpls_ldp_sync_default: true
   timers:
     local_convergence:
@@ -107,12 +108,6 @@ ethernet_interfaces:
   isis_network_point_to_point: true
   isis_hello_padding: true
   isis_circuit_type: level-1
-  isis_authentication_mode: shared-secret
-  isis_authentication_parameters:
-    both:
-      shared_secret:
-        profile: profile1
-        algorithm: sha-1
   isis_authentication_key: $1c$sTNAlR6rKSw=
   mpls:
     ip: true
@@ -219,8 +214,6 @@ ethernet_interfaces:
   isis_network_point_to_point: true
   isis_hello_padding: true
   isis_circuit_type: level-2
-  isis_authentication_mode: md5
-  isis_authentication_key: $1c$mNvaIXPetcSA2UnFwIaxwA==
   mpls:
     ip: true
     ldp:
@@ -263,8 +256,6 @@ ethernet_interfaces:
   isis_network_point_to_point: true
   isis_hello_padding: true
   isis_circuit_type: level-2
-  isis_authentication_mode: md5
-  isis_authentication_key: $1c$mNvaIXPetcSA2UnFwIaxwA==
 - name: ethernet22
   peer: peer3
   peer_interface: ethernet22
