--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/host_vars/l3_edge_isis.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/host_vars/l3_edge_isis.yml
@@ -1,5 +1,11 @@
 underlay_routing_protocol: isis
 underlay_isis_bfd: true
+underlay_isis_authentication:
+  both:
+    key_type: 0
+    key: password
+    mode: md5
+    rx_disabled: true
 isis_area_id: "49.0001"
 
 type: spine
