schema and template update for dot1q

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
@@ -51,6 +51,8 @@ ethernet_interfaces:
         trunk: tagged
       mode: dot1q-tunnel
       pvlan_mapping: 20-30
+      dot1q:
+        ethertype: 1536
       vlan_translations:
         - from: 23-37
           to: 45
